# QR

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: eikon_data.yaml
notebooks/: test.ipynb
scripts/: test.py
src/quant_research.egg-info/: PKG-INFO  SOURCES.txt
src/quant_research/data_portal/: eikon_loader.py  hl_ctxs_to_parquet.py  io.py
src/quant_research/models/: moving_average.py
src/quant_research/processing/: clean_intraday.py
